# hercules-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  hercules-mcp.json  hercules_setup.py  pyproject.toml  requirements.txt
docker/: entrypoint.sh
docs/: mcp_req.md  project_completion_handover.md
docs/testing/: tool_test_checklist.md
hercules/: __init__.py  main.py
hercules-extension/: gemini-extension.json
hercules/core/: __init__.py  concurrency.py  config.py  docker_manager.py  guidance.py  instance_lock.py
hercules/output/: __init__.py  banners.py  filters.py  sanitizer.py  truncator.py
hercules/resources/: __init__.py  agent_skills.py  linpeas_script.py  nse_skills.md  nuclei_skills.md  post_exploitation.py  powerup_script.py  winpeas_script.py
hercules/tools/: __init__.py
hercules/tools/cracking/: cracking_tool.py  wordlist_tool.py
hercules/tools/ctf/: __init__.py  ctf_tool.py
hercules/tools/exploitation/: metasploit_tool.py  searchsploit_tool.py  sqlmap_tool.py
hercules/tools/network/: network_tool.py  nmap_tool.py
hercules/tools/recon/: recon_tool.py
hercules/tools/system/: file_tool.py  scripts_tool.py  shell_tool.py  system_tool.py
hercules/tools/web/: nuclei_tool.py  web_scanner_tool.py
tests/: test_output_pipeline.py
tests/manual/: test_all.py  test_kwargs.py  test_local.py  test_misc.py  test_msf.py  test_msf_fast.py  test_msf_official.py  test_patch.py  test_remaining.py  test_scanme.py  test_sessions.py  test_sqlmap.py  test_system_tools.py
