[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hercules-mcp"
version = "0.1.0"
description = "Offensive Security MCP Server for AI Agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",
    "docker>=7.0.0",
    "pymetasploit3>=1.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
hercules = "hercules.main:main"

[tool.hatch.build.targets.wheel]
packages = ["hercules"]

[tool.hatch.build.targets.wheel.force-include]
"hercules/resources/nse_skills.md" = "hercules/resources/nse_skills.md"
"hercules/resources/nuclei_skills.md" = "hercules/resources/nuclei_skills.md"
